--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,7 +23,7 @@
 # - title by author
 # }}}
 
-{{{ 5.33.0 2021-12-03
+{{{ 5.33.1 2021-12-03
 
 :: new features
 
@@ -56,6 +56,9 @@
 - [1951467] PDF Output: Fix the option to break long words at the ends of lines causing boxes to be rendered at the end fo the line on macOS with some fonts
 
 - Google metadata plugin: When searching by ISBN if no results are found retry using an alternate query syntax
+
+- 5.33.1 fixes a couple of regressions that broke the toolbar in the popup comments editor dialog and rendering of the download
+  metadata button in the edit metadata dialog on windows
 
 :: improved recipes
 - Smithsonian Magazine
