--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,42 @@
 # - title by author
 # }}}
 
+{{{ 5.37.0 2022-02-18
+
+:: new features
+
+- [1961129] Book details: Add actions to trim the cover to the right-click menu
+
+- [1960586] Allow removing multiple email addresses at once in Preferences->Sharing by email
+
+- Book details: Use a better mono-spaced font on Windows by default
+
+- Add a tweak in Preferences->Tweaks to change the behavior of the Tab key when completing entries
+
+- [1959928] Edit metadata: In "All in one" mode add an adjustable splitter between the cover and formats boxes
+
+:: bug fixes
+- [1960686] Textile output: Dont fail if input document has invalid padding or margin specifications
+
+- [1960446] E-book viewer: Fix image display window not remembering its size and settings when run from within calibre
+
+- E-book viewer: Fix setting to use roman numerals for series not being respected
+
+- Edit book: When saving a copy do not fail if the original file has no write permissions
+
+- [1960180] Embed fonts tool: Create <head> when missing
+
+- Tag editor: Improve performance when very large number of tags present
+
+:: improved recipes
+- Live Mint
+- The Hindu
+- Reuters
+- MMC RTV Slovenija
+- Down To Earth
+- Publico.PT
+}}}
+
 {{{ 5.36.0 2022-02-04
 
 :: new features
