--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,54 @@
 # - title by author
 # }}}
 
+{{{ 5.41.0 2022-04-22
+
+:: new features
+
+- [1968810] Allow creating multiple types of temporary marks (pins) by right clicking the mark books button (which can be added to the calibre toolbar via Preferences->Toolbars & menus)
+
+- Kobo driver: Support updated firmware
+
+- [1967149] Show a popup message when a Kindle is connected mentioning the Amazon cover bug and how to workaround it
+
+- Edit book: Table of Contents tool: Allow using the title attribute on headings tags to get the text for table of contents entries
+
+- When creating a custom column to display real numbers allow specifying th enumber of decimal digits to display
+
+- Amazon metadata download: Add support for amazon.in country website
+
+:: bug fixes
+
+- [1969302] Edit book: Fix AltGr+{ not working on some keyboard layouts
+
+- [1967828] TXT Input: Fix rare failure to convert some large TXT files with non-ascii text
+
+- Get books: Update English language Amazon plugins for website changes
+
+:: improved recipes
+- The Economic Times India
+- Business Standard
+- scmp.com
+- Wired Magazine Monthly Edition
+- Reason Magazine
+- The Skeptical Inquirer
+- Times of India
+- LiveMint
+- The Week
+- Indian Express
+- Hindustan Times
+
+:: new recipes
+- Eenadu by unkn0wn
+- Harvard Business Review by unkn0wn
+- Hindustan by unkn0wn
+- Dainik Bhaskar by unkn0wn
+- Free Inquiry by Howard Cornett
+- Sportstar by unkn0wn
+- Digit Magazine by unkn0wn
+- The Diplomat by unkn0wn
+}}}
+
 {{{ 5.40.0 2022-04-01
 
 :: new features
