--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,53 @@
 # - title by author
 # }}}
 
+{{{ 6.3.0 2022-08-12
+
+:: new features
+
+- E-book viewer: Allow searching for nearby words using a new "Nearby words" search mode
+
+- calibredb: New fts_search and fts_index commands to perform full text searching from the command line
+
+- [1985021] Image viewing popup: Allow zooming using the standard shortcuts of Ctrl+plus/minus
+
+:: bug fixes
+
+- Fix a regression in calibre 6.0 that broke remembering the previous sort order for a column
+
+- [1983484] Fix a regression in calibre 6.0 that broke processing of very high resolution images
+
+- [1983230] Full text search: Fix error when using restrict searched books and more than 900 books are present in the searched list
+
+- E-book viewer: Fix parsing of CSS styles with @supports rules not working
+
+- E-book viewer: Speed up initial render of books with lots of CSS in <style> tags by not prettying the CSS
+
+- [1983126] Google books metadata download: Fix paragraphs not being recognized
+
+- Content server: Fix light background for comments editor in dark mode
+
+- [1985058] Content server: Fix margin and body background color mismatch when reading books with a non-white/black color scheme
+
+- [1983271] Content server: Fix long tapping in the notes edit area incorrectly changing the highlight extent
+
+- Google search engine: Fix for different URL encoding used by Google servers in Portugal
+
+- Check library: Fix vacuum not running on FTS db
+
+:: improved recipes
+- Wirtschaft Woche
+- Scientific American
+- Popular Science
+- Mediapart
+- MIT Technology Review
+- Indian Express
+- Eenadu
+
+:: new recipes
+- Various Russian and Ukranian news sources by bugmen00t
+}}}
+
 {{{ 6.2.1 2022-07-29
 
 :: new features
